--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = teensy
 board = teensylc
 framework = arduino
-build_flags = -DUSB_MIDI_SERIAL
+build_flags = -DUSB_MIDI
 lib_deps = evert-arias/EasyButton@^2.0.1
